default/objects/Incident/Incident.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>