default/objects/Incident/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CO</fullName>
                <label>Company</label>
            </value>
            <value>
                <fullName>EB</fullName>
                <label>Elba</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>