default/objects/Incident/fields/CompanyId__c.field-meta.xml
<CustomField>
    <fullName>CompanyId__c</fullName>
    <label>Company ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>