default/objects/Incident/fields/CustomerSatisfaction__c.field-meta.xml
<CustomField>
    <fullName>CustomerSatisfaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Satisfaction</label>
    <type>Checkbox</type>
</CustomField>