default/objects/Incident/fields/ManagementTeam__c.field-meta.xml
<CustomField>
    <fullName>ManagementTeam__c</fullName>
    <label>Management Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TR</fullName>
                <label>Processing</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Quality</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Insurance Company</label>
            </value>
            <value>
                <fullName>EX</fullName>
                <label>Experts</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>