default/objects/Incident/fields/MkisId__c.field-meta.xml
<CustomField>
    <fullName>MkisId__c</fullName>
    <externalId>true</externalId>
    <label>Mkis Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>