default/objects/Incident/fields/NestedCaseID__c.field-meta.xml
<CustomField>
    <fullName>NestedCaseID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nested Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>