default/objects/Incident/fields/OrderService__c.field-meta.xml
<CustomField>
    <fullName>OrderService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order/Service</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>