default/objects/Incident/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CO</fullName>
                <label>Insurance Company</label>
            </value>
            <value>
                <fullName>AS</fullName>
                <label>Policyholder</label>
            </value>
            <value>
                <fullName>RE</fullName>
                <label>Repairer</label>
            </value>
            <value>
                <fullName>PE</fullName>
                <label>Adjuster</label>
            </value>
            <value>
                <fullName>TR</fullName>
                <label>Processing</label>
            </value>
            <value>
                <fullName>ME</fullName>
                <label>Broker / Branch</label>
            </value>
            <value>
                <fullName>Email</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
            <value>
                <fullName>Phone</fullName>
                <isActive>false</isActive>
                <label>Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>