default/objects/Incident/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M01</fullName>
                <label>Inappropriate Conduct or Presence</label>
            </value>
            <value>
                <fullName>M02</fullName>
                <label>Network Issues</label>
            </value>
            <value>
                <fullName>M03</fullName>
                <label>Appointment</label>
            </value>
            <value>
                <fullName>M04</fullName>
                <label>Report</label>
            </value>
            <value>
                <fullName>M05</fullName>
                <label>Repair</label>
            </value>
            <value>
                <fullName>M06</fullName>
                <label>Adjuster Coordination</label>
            </value>
            <value>
                <fullName>Reason</fullName>
                <isActive>false</isActive>
                <label>Reason</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>