default/objects/Incident/fields/ReopenDateTime__c.field-meta.xml
<CustomField>
    <fullName>ReopenDateTime__c</fullName>
    <label>Reopen DateTime</label>
    <type>DateTime</type>
</CustomField>