default/objects/Incident/fields/ReopenReason__c.field-meta.xml
<CustomField>
    <fullName>ReopenReason__c</fullName>
    <label>Reopen Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ER</fullName>
                <label>Por error</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Por compañia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>