default/objects/Incident/fields/Repairer__c.field-meta.xml
<CustomField>
    <fullName>Repairer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repairer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>