default/objects/Incident/fields/ResponsibleParty__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleParty__c</fullName>
    <label>Responsible Party</label>
    <length>50</length>
    <type>Text</type>
</CustomField>