default/objects/Incident/fields/ResponsiblePartyType__c.field-meta.xml
<CustomField>
    <fullName>ResponsiblePartyType__c</fullName>
    <label>Responsible Party Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TR</fullName>
                <label>Case Handler</label>
            </value>
            <value>
                <fullName>RE</fullName>
                <label>Repairer</label>
            </value>
            <value>
                <fullName>PE</fullName>
                <label>Adjuster</label>
            </value>
            <value>
                <fullName>OP</fullName>
                <label>Operator</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Insurance Company</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>