default/objects/Incident/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ES</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>DS</fullName>
                <label>Disapproved</label>
            </value>
            <value>
                <fullName>EP</fullName>
                <label>Partially approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>