default/objects/Incident/fields/Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sub_Reason__c</fullName>
    <label>Sub-Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S01001</fullName>
                <label>Inappropriate Conduct or Behavior</label>
            </value>
            <value>
                <fullName>S01002</fullName>
                <label>Visit Without Proper Tools</label>
            </value>
            <value>
                <fullName>S02001</fullName>
                <label>No Repairer Available in Area</label>
            </value>
            <value>
                <fullName>S02002</fullName>
                <label>Trade Unavailability</label>
            </value>
            <value>
                <fullName>S02003</fullName>
                <label>Communication or Availability Issues</label>
            </value>
            <value>
                <fullName>S02004</fullName>
                <label>Repairer Without Proper Equipment</label>
            </value>
            <value>
                <fullName>S02005</fullName>
                <label>Urgency Cancelled Due to Network Issues</label>
            </value>
            <value>
                <fullName>S03001</fullName>
                <label>No Show</label>
            </value>
            <value>
                <fullName>S03002</fullName>
                <label>Delay in Scheduling Appointments</label>
            </value>
            <value>
                <fullName>S03003</fullName>
                <label>Delay in Follow-Up Appointments</label>
            </value>
            <value>
                <fullName>S03004</fullName>
                <label>Trade Coordination Issues</label>
            </value>
            <value>
                <fullName>S03005</fullName>
                <label>Urgent Requests Not Attended</label>
            </value>
            <value>
                <fullName>S03006</fullName>
                <label>No Contact from Repairer</label>
            </value>
            <value>
                <fullName>S03007</fullName>
                <label>Appointment Scheduled Without Policyholder Contact</label>
            </value>
            <value>
                <fullName>S04001</fullName>
                <label>Delay in Reports or Estimates</label>
            </value>
            <value>
                <fullName>S04002</fullName>
                <label>Missing Photographs</label>
            </value>
            <value>
                <fullName>S04003</fullName>
                <label>Incorrect Coverage Application</label>
            </value>
            <value>
                <fullName>S04004</fullName>
                <label>Delay in Sending Reports to Adjuster</label>
            </value>
            <value>
                <fullName>S04005</fullName>
                <label>Incorrect Billing</label>
            </value>
            <value>
                <fullName>S04006</fullName>
                <label>Incomplete Visit Report</label>
            </value>
            <value>
                <fullName>S04007</fullName>
                <label>Repeated Information in Successive Updates</label>
            </value>
            <value>
                <fullName>S04008</fullName>
                <label>Incorrect Closure</label>
            </value>
            <value>
                <fullName>S05001</fullName>
                <label>Use of Low-Quality Materials</label>
            </value>
            <value>
                <fullName>S05002</fullName>
                <label>Damage Caused by Repairer</label>
            </value>
            <value>
                <fullName>S05003</fullName>
                <label>Pending Work or Incomplete Repair</label>
            </value>
            <value>
                <fullName>S05004</fullName>
                <label>Defective Work Execution</label>
            </value>
            <value>
                <fullName>S05005</fullName>
                <label>Failure to Meet Drying Timeframes</label>
            </value>
            <value>
                <fullName>S05006</fullName>
                <label>Incorrect Material Timeframes</label>
            </value>
            <value>
                <fullName>S06001</fullName>
                <label>Lack of Adjuster Coordination</label>
            </value>
            <value>
                <fullName>S06002</fullName>
                <label>Failure to Follow Adjuster Instructions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>