default/objects/Incident/validationRules/ClosedValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Status), &quot;RP&quot;),
    NOT(
        AND(
            ISCHANGED(Status),
            ISPICKVAL(Status, &quot;GE&quot;),
            LEN(TEXT(ReopenReason__c)) &gt; 0
        )
    )
)</errorConditionFormula>
    <errorMessage>Si desea editar este incidente, debe volver a abrirlo.</errorMessage>
</ValidationRule>