default/objects/Incident/validationRules/LockTypeReasonOriginWhenCompany.validationRule-meta.xml
<ValidationRule>
    <fullName>LockTypeReasonOriginWhenCompany</fullName>
    <active>true</active>
    <description>Prevents edits to Type, Reason, and Origin when Origin is Company.</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISPICKVAL(PRIORVALUE(Origin__c), &quot;CO&quot;),
    OR(
        ISCHANGED(Type),
        ISCHANGED(Reason__c),
        ISCHANGED(Origin__c)
    )
)</errorConditionFormula>
    <errorDisplayField>Origin__c</errorDisplayField>
    <errorMessage>Type, Reason, and Origin are locked when Origin is Company.</errorMessage>
</ValidationRule>