default/objects/Incident/validationRules/PreventOwnerChangeWhenClosed.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventOwnerChangeWhenClosed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(OwnerId)
)</errorConditionFormula>
    <errorMessage>You cannot change the owner</errorMessage>
</ValidationRule>