default/objects/Incident/validationRules/RequireReopenReason.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireReopenReason</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Reopened&quot;),
    ISCHANGED(Status),
    ISPICKVAL(ReopenReason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Please select a reopening reason before changing the status to “Reaperturado”.</errorMessage>
</ValidationRule>