default/objects/Incident/validationRules/StatusClosedBlockEdits.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusClosedBlockEdits</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  
  TEXT(PRIORVALUE(Status)) = &quot;RP&quot;,
		ISPICKVAL(Status, &quot;Reopened&quot;),
		OR(
						NOT(ISCHANGED(ReopenReason__c)),
						NOT(ISCHANGED(ReopenDateTime__c)),
						NOT(ISCHANGED(EndDateTime))
						),
  NOT($Permission.IsAdmin)
)</errorConditionFormula>
    <errorMessage>Can&apos;t modify fields when status equals closed.</errorMessage>
</ValidationRule>