default/objects/Incident/validationRules/StatusClosedMandatoryFields.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusClosedMandatoryFields</fullName>
    <active>true</active>
    <description>If Status = Closed,you have some mandatory fields that need to be filled, with the exception for Profile = System Administrator.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;RP&quot;),
ISCHANGED(Status),
ISBLANK(TEXT(Result__c)),
CustomerSatisfaction__c = FALSE,
NOT($Permission.IsAdmin)
)</errorConditionFormula>
    <errorMessage>To close the incident, the Result and Customer Satisfaction fields must be filled in!</errorMessage>
</ValidationRule>